# libextr

./: CMakeLists.txt
src/asm_unix_x86/: math.h  math.s
src/cmdline/: cmdline.cxx  cmdline.h
src/core/: config.c  config.h  cpp.hxx  init.cxx  init.h
src/cpp/: helper.hxx
src/cxx/: call_except.hxx  extr_except.hxx  type.hxx
src/io/: color_io.cxx  color_io.h
src/os/unix/: exec_cmd.c  exec_cmd.h
src/string/: extr_string.h  split.c  split.cxx
